--- a/source/my_page.html
+++ b/source/my_page.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>titre</title>
+        <link href="./styles/my_style.css" rel="stylesheet">
     </head>
 
     <body>
+        <div class="welcome">
         hello, and welcome to my site
+        </div>
     </body>
 </html>
