--- a/source/my_page.html
+++ b/source/my_page.html
@@ -4,11 +4,19 @@
         <meta charset="utf-8" />
         <title>titre</title>
         <link href="./styles/my_style.css" rel="stylesheet">
+        <script src="./scripts/my_script.js"></script>
     </head>
 
-    <body>
+    <body onload="init();">
         <div class="welcome">
         hello, and welcome to my site
+        </div>
+        <div id="test">
+        </div>
+        <div>
+                <button onClick="test_button()">
+                    Click Me!
+                </button>
         </div>
     </body>
 </html>
